# strata

./: .clippy.toml  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONFIG.md  Cargo.toml  LICENSE  README.md  SETUP.md  VISION.md  deny.toml  pyrightconfig.json  ruff.toml  settings.json
agents/: code-reviewer.md  knowledge-lookup.md  memory-recall.md  orchestrator.md  pattern-extractor.md  planner.md  quick-research.md
cli/: CHANGELOG.md  Cargo.toml
commands/: best-of-n.md  codex-review.md  collect.md  commit.md  deep-understand.md  dispatch.md  end.md  evaluate.md  get-to-work.md  harness.md  learn.md  monitor.md  overnight.md  pickup.md  research.md  review.md  ship.md  status.md  tidy.md  verify.md  xbow.md
config/: model-map.toml  private-tokens.example.txt
examples/: settings.json
hooks/: CLAUDE.md  README.md  allow-claude-dir-edits.sh  consolidate-memories.sh  context-doc-router.py  context-doc-router.sh  context-enrich-search.sh  context-memory-hint.sh  context-nudge.sh  context-pre-compaction-save.sh  context-suggest-compact.sh  gate-codex-exec.sh  gate-codex-pre-push.sh  gate-destructive-git.sh  gate-gh-public-actions.sh  gate-nested-clone.sh  gate-paid-compute-destroy.sh  gate-pre-push.sh  gate-resume-read.py  gate-resume-read.sh  gate-rm-guard.sh  gate-verify.sh  lib-ledger.sh  lifecycle-auto-end-fallback.sh  lifecycle-sync-state.sh  lifecycle-warn-unpushed.sh  memory-access-log.sh  memory-digest.sh  memory-entities.sh  observe-track-edits.sh  observe-track-mcp-tools.sh  observe-track-session-events.sh  observe-track-skill-runs.sh  quality-crlf-check.sh  quality-lint-on-write.sh  quality-resource-sizing.sh  quality-search-path-guard.sh  session-check-dev-servers.sh  session-cleanup-codex.sh  session-cleanup-verify-markers.sh  (+5 more)
memory/: .gitignore  CARD-SCHEMA.md  CLAUDE.md  README.md  __init__.py  config.py  digest.py  engine.py  recall.py  reconcile.py  regen_memory_index.py  telemetry.py
reference/: INDEX.md  agent-architecture.md  agent-taxonomy.md  autooptimize-methodology.md  claude-code-native-levers.md  claude-code-patterns.md  code-quality-principles.md  code-smell-baseline.md  codex-framings.md  codex-invocation.md  colab-gdrive.md  context-continuity.md  dmux-dispatch-protocol.md  eval-methodology.md  followup-convention.md  free-compute-catalog.md  getting-started.md  gpu-training-workflow.md  knowledge-management.md  load-bearing-iteration.md  mcp-development.md  model-delegation.md  nodejs-typescript-setup.md  optimization-philosophy.md  resource-sizing.md  review-fanout.md  review-public-repo-audit.md  rust-ai-project-setup.md  skill-design-principles.md  tier-classification.md  vastai-operations.md
skills/: INDEX.md  ask-better.md  commit.md  (+50 more)
(+426 files in other folders)
