[package]
name = "strata-cli"
version = "0.1.0"
edition = "2024"
description = "Scaffold and validate AI-navigable project structures"
license = "MIT"
repository = "https://github.com/onblueroses/strata"
keywords = ["cli", "scaffolding", "project-structure", "ai", "documentation"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85"

[[bin]]
name = "strata"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
console = "0.15"
dialoguer = "0.11"
globset = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
assert_fs = "1"

[profile.release]
lto = true
strip = true
codegen-units = 1
