[package]
name = "strata-cli"
version = "0.2.0"
edition = "2024"
description = "Agent harness layer: structure, validation, and target-generation for AI-native codebases."
license = "MIT"
repository = "https://github.com/onblueroses/strata"
keywords = ["cli", "scaffolding", "project-structure", "ai", "documentation"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85"

[[bin]]
name = "strata"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
console = "0.15"
dialoguer = "0.11"
ignore = "0.4"
miette = { version = "7", features = ["fancy"] }
minijinja = "2"
notify = "8"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
serde-sarif = "0.8"
thiserror = "2"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1", features = ["json", "redactions"] }
insta-cmd = "0.6"
predicates = "3"
tempfile = "3"
assert_fs = "1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "user-hooks"]

[profile.release]
lto = true
strip = true
codegen-units = 1

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
panic_in_result_fn = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
allow_attributes = "deny"
# CLI tool - stdout/stderr is the primary output, not a mistake
print_stdout = "allow"
print_stderr = "allow"
# Pedantic overrides - too noisy, low signal
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"

[lints.rust]
missing_debug_implementations = "warn"
